fix: refine modal sizing and remove horizontal overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -92,9 +92,8 @@ section > :last-child {
 	content: "";
 	position: absolute;
 	top: 0;
-	left: 50%;
-	transform: translateX(-50%);
-	width: 100vw;
+	left: 0;
+	width: 100%;
 	height: 100%;
 	background: var(--bg);
 	z-index: -1;
@@ -104,9 +103,8 @@ section > :last-child {
 	content: "";
 	position: absolute;
 	bottom: 0;
-	left: 50%;
-	transform: translateX(-50%);
-	width: 100vw;
+	left: 0;
+	width: 100%;
 	height: 1px;
 	background: var(--border);
 	z-index: -1;
@@ -859,16 +857,16 @@ section > :last-child {
 	position: relative;
 	z-index: 1;
 	width: fit-content;
-	max-width: 92vw;
-	max-height: 88vh;
+	max-width: calc(92vw / 1.5);
+	max-height: calc(88vh / 1.5);
 	display: inline-block;
 	line-height: 0;
 }
 
 .modal-content img {
 	width: auto;
-	max-width: 92vw;
-	max-height: 88vh;
+	max-width: calc(92vw / 1.5);
+	max-height: calc(88vh / 1.5);
 	height: auto;
 	display: block;
 	object-fit: contain;
@@ -954,9 +952,8 @@ section > :last-child {
 	content: "";
 	position: absolute;
 	top: 0;
-	left: 50%;
-	transform: translateX(-50%);
-	width: 100vw;
+	left: 0;
+	width: 100%;
 	height: 1px;
 	background: var(--border);
 }
